# idlemmo

./: .gitignore  Cargo.toml
src/: client.rs  config.rs  db.rs  error.rs  main.rs  parser.rs  traits.rs  utils.rs
src/client/: accounts.rs  actions.rs  character.rs  location.rs  mod.rs
src/models/: action.rs  cached_data.rs  character.rs  item.rs  location.rs  mod.rs  skill.rs  user.rs
src/traits/: accounts.rs  actions.rs  character.rs  location.rs  mod.rs
