[package]
name = "idlemmo-bot"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
base64 = "0.22.1"
chrono = { version = "0.4.42", features = ["serde"] }
dotenv = "0.15.0"
enum-iterator = "2.3.0"
fake = "4.4.0"
fastrand = "2.3.0"
html-escape = "0.2.13"
inquire = "0.9.1"
once-cell-regex = "0.2.1"
regex = "1.12.2"
reqwest = { version = "0.12.24", features = ["json", "cookies"] }
serde = { version = "1.0.228", features = ["derive"] }
serde-enum-str = "0.4.0"
serde_json = "1.0.145"
supabase_rs = { version = "0.5.0", default-features = false }
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "ansi"] }
url = "2.5.2"
async-trait = "0.1.80"

[dev-dependencies]
